# opendigger-pycli

./: .flake8  .markdownlint.json  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/: FUNDING.yml  rename_project.sh
.github/workflows/: main.yml  release.yml
docs/: Rainbow-dev-复赛-T2-ahpu_new_peasants思路文档.md  决赛-T2-ahpu_new_peasants-autogit.md  决赛-T2-ahpu_new_peasants.md  复赛-T2-ahpu_new_peasants.md
docs/assets/result_examples/display/: repo-X-lab2017#open-digger-graph-2023-10-03-23-46-33.html
docs/assets/result_examples/export/json/repo-X-lab2017-open-digger/: 2023-10-05-00-36-39.json
docs/assets/result_examples/export/report/repo-X-lab2017-open-digger/: 2023-10-03-18-51-57.html  2023-10-03-23-47-58.html
opendigger_pycli/: __init__.py  __main__.py  base.py  cli.py
opendigger_pycli/cli/: __init__.py  base.py  callbacks.py  config.py  config_cmd.py  custom_types.py  default_config.ini  display_cmd.py  env.py  export_cmd.py  monitor_cmd.py  parsers.py  query_cmd.py  report_cmd.py  utils.py
opendigger_pycli/cli/commands/: config_cmd.py  display_cmd.py  export_cmd.py  monitor_cmd.py
opendigger_pycli/cli/query/: index.py
opendigger_pycli/cli/tests/: test_query.py  test_repo_name_type.py
opendigger_pycli/config/: __init__.py  cli_config.py  config.py  default_config.ini  utils.py
opendigger_pycli/console/: __init__.py  print_base_info.py  print_indicator.py  print_indicator_graph.py  print_indicator_json.py  print_indicator_table.py  print_query_result.py  utils.py
opendigger_pycli/dataloader/: __init__.py  base.py  indices.py  metrics.py  networks.py  utils.py
opendigger_pycli/dataloader/tests/: test_dataloader_proto_check.py  test_indices.py  test_metrics.py  test_networks.py
opendigger_pycli/dataloaders/: base.py  indices.py  metrics.py  networks.py  utils.py
opendigger_pycli/dataloaders/tests/: __init__.py  test_dataloader_proto_check.py  test_indices.py  test_metrics.py  test_networks.py
opendigger_pycli/datatypes/: __init__.py  base.py  config.py  dataloader.py  indices.py  metrics.py  networks.py  query.py  result.py
opendigger_pycli/datatypes/indicators/: __init__.py  base.py  indices.py  metrics.py  networks.py
opendigger_pycli/datatypes/tests/: test_config_data.py  test_data_init.py  test_dataclass_field_type.py  test_metric_query_set.py
opendigger_pycli/exporters/: __init__.py  ai_report_utils.py  chart_exporter.py  json_exporter.py
opendigger_pycli/exporters/templates/: macro  project_openrank_network.html  report.html
opendigger_pycli/query/: index.py
opendigger_pycli/results/: display.py  export.py  query.py
opendigger_pycli/utils/: __init__.py  checkers.py  decorators.py  git_api.py  gtihub_api.py
opendigger_pycli/utils/tests/: conftest.py  test_github_api.py
plugin_examples/print_result/: print_result.py  setup.py
tests/: test_base.py
