[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["README.md", "LICENSE", "docs/"]
exclude = ["docs/*.html"]

[project]
name = "opendigger_pycli"
requires-python = ">=3.8"
authors = [{ name = "CoderChen01", email = "wwseyy@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
dependencies = ["click", "rich", "requests", "types-requests"]
dynamic = ["version", "description"]

[project.urls]
AuthorGithub = "https://github.com/CoderChen01"
Source = "https://github.com/CoderChen01/opendigger-pycli/"

[project.scripts]
opendigger = "opendigger_pycli.__main__:opendigger"

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "flake8",
    "black",
    "isort",
    "pytest-cov",
    "codecov",
    "mypy",
    "gitchangelog",
    "mkdocs",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39"]
