[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["README.md", "LICENSE", "docs/"]
exclude = ["docs/*.html"]

[project]
name = "opendigger_pycli"
requires-python = ">=3.8"
authors = [{ name = "CoderChen01", email = "wwseyy@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "click==8.1.4",
    "rich==13.5.2",
    "requests==2.31.0",
    "types-requests==2.31.0.2",
    "click-plugins==1.1.1",
    "pyecharts==2.0.4",
    "openai==0.28.1",
]
dynamic = ["version", "description"]

[project.urls]
AuthorGithub = "https://github.com/CoderChen01"
Source = "https://github.com/CoderChen01/opendigger-pycli/"

[project.scripts]
opendigger = "opendigger_pycli.__main__:opendigger"

[project.optional-dependencies]
test = [
    "pytest==7.4.0",
    "coverage==7.2.7",
    "flake8==6.0.0",
    "black==23.7.0",
    "isort==5.12.0",
    "pytest-cov==4.1.0",
    "codecov==2.1.13",
    "mypy==1.4.1",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39"]
